Add snackbar with available internal storage percentage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Simple Cleanup</string>
+    <string name="space_left_percentage">Space left: %d%%</string>
 </resources>
