[WIP] Add purchase features activity

--- a/SimpleCleanup/app/src/main/res/values/strings.xml
+++ b/SimpleCleanup/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="large_text">
         "Alfred"
     </string>
+    <string name="patreon_supporters">Patreon supporters</string>
 </resources>
